<resources>
    <string name="app_name">Inventory App</string>

    <string name="add_item">Add item</string>

    <string name="action_save">Save</string>

    <string name="category_items">Books</string>

    <string name="category_name">Name</string>

    <string name="category_price">Price</string>

    <string name="category_quantity">Quantity</string>

    <string name="category_supplier_name">Supplier Name</string>

    <string name="category_phone">Supplier Phone</string>

    <string name="error_saving">Error with saving item</string>

    <string name="item_saved">Item saved  id:</string>

    <string name="check_details">Check details</string>

</resources>
