<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".EditorActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            style="@style/CategoryStyle"
            android:text="@string/category_items" />

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:orientation="vertical"
            android:paddingLeft="4dp">

            <EditText
                android:id="@+id/product_name_edit_text"
                style="@style/EditorFieldStyle"
                android:hint="@string/category_name"
                android:inputType="textCapWords" />

            <EditText
                android:id="@+id/price_edit_text"
                style="@style/EditorFieldStyle"
                android:hint="@string/category_price"
                android:inputType="number" />

            <EditText
                android:id="@+id/quantity_edit_text"
                style="@style/EditorFieldStyle"
                android:hint="@string/category_quantity"
                android:inputType="number" />

            <EditText
                android:id="@+id/product_supplier_name_edit_text"
                style="@style/EditorFieldStyle"
                android:hint="@string/category_supplier_name"
                android:inputType="textCapWords" />

            <EditText
                android:id="@+id/phone_edit_text"
                style="@style/EditorFieldStyle"
                android:hint="@string/category_phone"
                android:inputType="number" />
        </LinearLayout>
    </LinearLayout>

</LinearLayout>